--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 body{
-    background-color: aqua;
+    background-color: rgb(182, 218, 218);
 }
 h1{
-    font-size: 200px;
+    font-size:50px;
     font-weight: bold;
 }
