--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,18 @@
 body{
-    background-color: rgb(182, 218, 218);
+   background-color: rgb(218, 250, 250); 
 }
 h1{
-    font-size:50px;
-    font-weight: bold;
+    font-size:100px;
+    font-weight:bolder;
+    text-align: center;
+    text-shadow: 2.42px 3.52px 3px  rgb(244, 1, 1);
+    color: rgb(57, 204, 17);
+    border-left: 5px solid;
+    transition-delay: 0ms;
+    
+
+    
+}
+h1::placeholder{
+    font-size: 3em;
 }
